--- a/my_bootcamp/templates/base.html
+++ b/my_bootcamp/templates/base.html
@@ -155,6 +155,9 @@
 		{% block tutor_profile_page %}{% endblock tutor_profile_page %}
 		{% block cart_block %}{% endblock cart_block %}
 		{% block item_detail %}{% endblock item_detail %}
+		{% block razorpay_widget %}{% endblock razorpay_widget %}
+		{% block razorpay_success %}{% endblock razorpay_success %}
+		{% block item_delete %}{% endblock item_delete %}
 		
 		{% include "./Footer/Footer.html" %}
 	
