--- a/my_bootcamp/templates/Home/Home.html
+++ b/my_bootcamp/templates/Home/Home.html
@@ -2,7 +2,11 @@
 {% block home %}
 <div class='w-full'>
     
-    {% for item in form  %}       
+    {% for item in form  %}    
+        
+        {% if item %}
+            
+        {% endif %}
         <ul class='my-2 p-2'>
            
             <div class='bg-slate-800  grid md:grid-cols-2 gap-2 p-2 h-full'>
