file update function added.

--- a/my_bootcamp/templates/ItemUpdate/ItemUpdate.html
+++ b/my_bootcamp/templates/ItemUpdate/ItemUpdate.html
@@ -10,6 +10,11 @@
             <p>{{form.thumbnail}}</p><br>
             <p>{{form.price}}</p><br>
             <p>{{form.description}}</p>
+            <p class='hidden'>{{form.video}}</p>
+            <p class='hidden'>{{form.category}}</p>
+            <p>{{form.instructor}}</p>
+            <p>{{form.created_at}}</p>
+
         </div>
         <div class='grid grid-cols-3 h-12 my-12 gap-4'>
                 <div  class='col-span-1'></div>
