--- a/my_bootcamp/templates/base.html
+++ b/my_bootcamp/templates/base.html
@@ -160,6 +160,7 @@
 		{% block item_delete %}{% endblock item_delete %}
 		{% block item_update %}{% endblock item_update %}
 		
+		{% block comment %}{% endblock comment %}
 		{% include "./Footer/Footer.html" %}
 	
 
