--- a/my_bootcamp/templates/Home/Home.html
+++ b/my_bootcamp/templates/Home/Home.html
@@ -87,8 +87,14 @@
                     <span class='font-bold underline text-violet-700'>Comments:-</span>
                     <ul class='p-2 h-44 overflow-y-scroll sup-scrollbar bg-gray-800 my-2 border-gray-400 rounded-lg'>
                     {% for comment in item.comments.all  %}
-                            <li><span class='font-bold mr-2'>{{comment.user}}:</span>{{comment.comment}}</li>
+                            <li>
+                                <span class='font-bold mr-2'>{{comment.user}}:</span>{{comment.comment}}
                            
+                           {% if comment.user.id == user.id %}
+                           <a href="{% url 'comment-delete' comment.id %}"><button type="submit" class='text-right text-xs pl-10'><i class="fa-regular fa-trash-can  text-blue-300 w-4 h-4 "></i><br></button></a>
+                           {% endif %}
+                            </li>
+                            
                     {% endfor %}
                     </ul>
                 </p>
