PaymentItem page created.

--- a/my_bootcamp/templates/base.html
+++ b/my_bootcamp/templates/base.html
@@ -159,6 +159,7 @@
 		{% block razorpay_success %}{% endblock razorpay_success %}
 		{% block item_delete %}{% endblock item_delete %}
 		{% block item_update %}{% endblock item_update %}
+		{% block payment_item %}{% endblock payment_item %}
 		
 		{% block comment %}{% endblock comment %}
 		{% include "./Footer/Footer.html" %}
