--- a/my_bootcamp/templates/CartPage/CartPage.html
+++ b/my_bootcamp/templates/CartPage/CartPage.html
@@ -45,7 +45,7 @@
     {% for item in order_details %}
     <ol class='my-2 border border-slate-200 p-2 rounded-lg xs:w-full xm:w-full sm:w-full md:w-full w-1/3 '>
         <li>
-        Purchase ItemId: {{item.id}}
+        Purchase ItemId: #{{reciept_num}}{{item.id}}
         </li>
         <li>
         Pusrchase User Name: {{user}}
@@ -54,7 +54,7 @@
         Purchase Order Id: {{item.order_id}}
         </li>
         <li>
-        Purchase Id: {{item.rzorpay_payment_id}}
+        Purchase Id: {{item.razorpay_payment_id}}
         </li>
         <li>
         Purchased Date: {{item.enrolled_at}}
