--- a/my_bootcamp/templates/NavBar/NavBar.html
+++ b/my_bootcamp/templates/NavBar/NavBar.html
@@ -222,12 +222,10 @@
                     items-center  text-violet-700 hover:text-blue-700"></i></button></p>
             </div>
             {% if user.is_authenticated %}
-            <div class='grid grid-cols-2 gap-4 py-2 mt-4'>
-                <div class='text-center'>
+            <div class='grid grid-cols-2 gap-4 py-2 mt-4 text-right'>
+                <div></div>
+                <div class='text-right'>
                     <a href="{% url "logout-page" %}" class='p-2 border border-blue-200 bg-blue-700 rounded-md text-center'>Sign Out</a>
-                </div>
-                <div class='text-center'>
-                    <a href="{% url "signup-page" %}" class='p-2 border border-orange-200 bg-green-700 rounded-md text-center'>Sign Up</a>
                 </div>
             </div>
             {% else %}
