--- a/my_bootcamp/templates/TutorProfilePage/TutorProfilePage.html
+++ b/my_bootcamp/templates/TutorProfilePage/TutorProfilePage.html
@@ -19,18 +19,19 @@
             {{item.video}}
             <br>
         </div>
-        <div class='flex flex-row mt-4'>
-            <div class='flex-1'>
-                <form method="post" action="">
-                    {% csrf_token %}
-                    <button type='submit' class='p-2 w-[75%] lg:w-[50%] bg-orange-700 rounded-md border border-orange-200' aria-label="Delete">Delete</button>
-                </form>
+        <div class='text-right mt-4 '>
+            <div class=''>
+                <a href="{% url 'item-delete-page' item.id %}">
+                    <button type='submit' class='p-2 w-72 bg-red-700 rounded-md border border-red-200' aria-label="Delete">Delete</button>
+                </a>
+            </div><br>
+            <div class=''>
+                <a href="{% url 'item-update-page' item.id %}">
+                    <button type='submit' class='p-2 w-72 bg-green-700 rounded-md border border-green-200' aria-label="Delete">Update</button>
+                </a>
             </div>
-            <div class='flex-1 '>
-                <form method="get" action="">
-                    <button type='submit' class='p-2 w-[75%] lg:w-[50%] bg-green-700 rounded-md border border-green-200' aria-label="Edit">Edit</button>
-                </form>
-            </div>
+
+            
         </div>
     </ul>
     {% endfor %}
